--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<div class="footer center-all" *ngIf="signedIn">
+    <hr style="width: 50%;">
+    Mainstreamify, a project by Neil Menon and Harrison Li
+</div>
