--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,93 @@
-/* You can add global styles to this file, and also import other style files */
-
-
+/* 
+    Neil Menon, Harrison Li
+    styles.css
+*/
 html {
     /* height: 100%; */
 }
 
+.sidenav-container {
+    height: 100%;
+  }
+  
+  .sidenav {
+    width: 201px;
+  }
+  
+  .sidenav .mat-toolbar {
+    background: inherit;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
+  @media screen and (max-width: 500px) {
+    .sign-in {display: none;}
+  }
+  
+  @media (min-width: 768px) {
+    .mat-toolbar.mat-primary {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+  }
+  
+  .mat-toolbar.mat-primary {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    height: 56px;
+  }
+  
+  .navbar-user-button {
+    line-height: 43px;
+  }
+  
+  .navbar-user-image {
+    height: 26px;
+    margin: 0 4px -10px 0;
+    border-radius: 50%;
+    border: 2px solid #bfbfbf;
+    user-select: none;
+  }
+  
+  .navbar-user-panel {
+    text-align: center;
+    height: 243px;
+    line-height: 22px;
+    text-decoration: none;
+    max-width: 100%;
+    position: relative;
+    background: transparent;
+    color: #fff;
+    padding: 0 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+  }
+  
+  .navbar-menu-user-image {
+    height: 150px;
+    border-radius: 50%;
+    border: 4px solid;
+  }
+  
+  .navbar-menu-username {
+    display: block;
+    font-size: 20px;
+  }
+  
+  .mobile-menu-toggle {
+    padding-top: 13px;
+    margin-left: -15px;
+  }
+
 body {
     margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
     height: 100%;
-    background-image: url(/assets/img/background.svg);
+    background-image: url(assets/img/background.svg);
     background-color: #222222;
     color: #e2e2e2;
     width: 85%;
@@ -66,7 +145,7 @@ hr {
 }
 
 .mat-drawer-container {
-    background-image: url(/assets/img/background.svg);
+    background-image: url(assets/img/background.svg);
     background-color: #222222;
     color: rgb(226, 226, 226);
 }
@@ -89,34 +168,6 @@ hr {
 .clear-color:hover {
     color: darkseagreen;
 }
-.refresh, .np-scrobble-history {
-    position: absolute;
-    top: -10px;
-    color: #e2e2e2;
-    font-size: 21px;
-}
-.refresh {
-    right: -10px;
-}
-.left-cmd-buttons {
-    position: absolute;
-    font-size: 21px;
-    top: -10px;
-    left: -10px;
-}
-.left-cmd-buttons > span {
-    font-size: 13px;
-    line-height: 20.5px;
-    position: absolute;
-    white-space: nowrap;
-    left: 24px;
-}
-.np-scrobble-history {
-    right: 14px;
-}
-.refresh:hover, .np-scrobble-history:hover {
-    color: darkseagreen;
-}
 
 .box {
     overflow: auto;
@@ -127,18 +178,8 @@ hr {
 .box-title {
     margin-bottom: 0px!important;
 }
-.box-button {
-    margin-top: 7px;
-    margin-left: 7px;
-    display: none;
-}
-.box-form {
-    display: inherit;
-    width: 100%;
-}
 .container {
     display: flex;
-    /* https://stackoverflow.com/questions/10422949/css-background-opacity */
 }
 .container > div {
     flex: 1;
@@ -147,148 +188,6 @@ hr {
     margin-right: 15px;
 }
 
-.lastfm-icon {
-    color: #e2e2e2;
-}
-.command-box {
-    height: 300px;
-}
-.group-panel {
-    background: transparent;
-}
-.command-result {
-    padding-bottom: 10px;
-}
-
-.command-result > table {
-    width: 100%;
-    border-collapse: collapse;
-    background-image: url(/assets/img/background.svg);
-    background: #222222;
-}
-.history-result > table {
-    width: 100%;
-    border-collapse: collapse;
-    background-image: url(/assets/img/background.svg);
-    background: #222222;
-}
-.command-result > table th, .history-result > table th {
-    /* border: 0.1px solid rgba(191, 191, 191, 0.534); */
-    color: #c73e6c;
-    font-weight: 400;
-    padding: 0px;
-}
-.command-result > table th,td {
-    border: none;
-}
-.command-result > table > tbody > tr:nth-child(odd), .history-result > table > tbody > tr:nth-child(odd) {
-    background: rgb(44, 44, 44);
-}
-.table-border {
-    border: 0.5px solid #bfbfbf3d;
-    padding: 2px 5px;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 350px;
-    text-overflow: ellipsis;
-}
-.sticky-table-header th {
-    position: sticky;
-    top: -1px;
-    background: #212121;
-    box-shadow: inset 0.5px 0.5px #bfbfbf3d, 0 0.5px #bfbfbf3d;
-}
-.command-result-summary {
-    padding-bottom: 5px;
-}
-.command-result-summary > a:first-child {
-    color: #e2e2e2;
-    font-size: 18px;
-}
-.command-result-summary > a:first-child:hover {
-    color: darkseagreen;
-}
-.group-dashboard-header {
-    padding-bottom: 10px;
-    position: relative;
-}
-.group-collapsed {
-    background: #6986a240;;
-    padding: 0.75rem!important;
-    border-radius: 1rem;
-    margin-bottom: 15px;
-}
-.group-dashboard-expand {
-    position: absolute!important;
-    right: 0.2rem;
-    top: -0.2rem;
-}
-.group-dashboard-collapse {
-    position: absolute!important;
-    right: 0.1rem;
-    top: -0.4rem;
-}
-.group-dashboard-header > h1 {
-    color: #bfbfbf;
-    max-width: 85%;
-    margin: auto;
-}
-.group-dashboard-subtext {
-    display: flex; 
-    padding: 0px 5px;
-    padding-top: 3px;
-}
-.now-playing-container {
-    height: 255px;
-}
-.now-playing-artwork-container {
-    width: 110px;
-    height: 110px;
-    margin: auto;
-}
-.now-playing-details {
-
-    margin: auto;
-}
-.now-playing-details span {
-    width: 150px;
-    max-width: 200px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    display: block;
-    margin: auto;
-}
-.now-playing-box {
-    flex-wrap: wrap;
-    padding: 5px;
-}
-.now-playing-box:hover {
-    background: #bfbfbf21;
-}
-.now-playing-errors {
-    margin-top: 75px;
-}
-.now-playing-track:after {
-    content: url(/assets/img/nowplaying.gif);
-    display: inline-block;
-    margin-left: 2px;
-    position: relative;
-    top: 1px;
-}
-.recently-played-track {
-    color: #bfbfbf;
-    margin-left: 2px;
-    font-size: 13px;
-}
-/* .group-dashboard-subtext > span:last-child{
-    width: 45%;
-    max-width: 300px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: right;
-} */
 .beta {
     background: #ba0000;
     padding: 4px;
@@ -298,78 +197,18 @@ hr {
     font-size: 12px;
     line-height: 14px;
 }
-.history-options-container {
-    display: flex;
-}
-.mat-dialog-content.history-result {
-    margin: 0;
-    padding: 0;
-}
-div.history-options-container > mat-paginator {
-    margin-right: -15px;
-}
-@media screen and (max-width: 526px) {
-    .history-options-container {
-        flex-wrap: wrap;
-    }
-    .history-options, .mat-paginator-container {
-        align-items: center!important;
-        justify-content: center!important;
-        flex-wrap: wrap!important;
-    }
-    .mat-paginator-page-size {
-        margin-right: 0px!important;
-    }
-    div.history-options-container > div.spacer {
-        display: none;
-    }
-}
-.history-options {
-    font-size: 12px;
-    display: flex;
-    align-items: baseline;
-    flex-wrap: wrap-reverse;
-}
-.mat-paginator-container {
-    align-items: baseline!important;
-    padding: 0px!important;
-}
-.history-options > mat-form-field {
-    padding-right: 5px;
-}
+
 
 @media screen and (max-width: 960px) {
-    .container:not(.now-playing-container > .container):not(#group-detail > .container):not(.session-members) {
+    .container {
         display: block;
     }
-    .container:not(.now-playing-container > .container):not(#group-detail > .container):not(.session-members) > div {
+    .container > div {
         flex: none;
     }
     .container > div:not(:last-child) {
         margin-right: 0;
     }
-    .now-playing-container {
-        height: 355px;
-    }
-    .now-playing-errors {
-        margin-top: 125px;
-    }
-    .history-table-artist {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 330px) {
-    .container.session-members {
-        display: block;
-    }
-    .container.session-members > div {
-        flex: none;
-    }
-}
-
-@media screen and (max-width: 990px) {
-    .box-button {display: none;}
 }
 
 .tooltip {
@@ -380,62 +219,15 @@ div.history-options-container > mat-paginator {
     width: 100%;
 }
 
-.group-session {
-    background: #517a8c;
-    position: absolute;
-    top: 33px;
-    right: 5px;
-    padding-right: 5px;
-}
-
-.group-session.normal-session {
-    background: #734db7;
-}
-
-.group-session.silent-session {
-    background: #7d7652;
-}
-
-.group-session > span {
-    padding-right: 1px;
-    padding-left: 2px;
-}
-
 .mat-dialog-container {
-    background-image: url(/assets/img/background.svg);
+    background-image: url(assets/img/background.svg);
 }
 .mat-paginator {
     background: transparent;
 }
 
-.mat-select-panel {
-    background-image: url(/assets/img/background.svg);
-    background-color: #222;
-}
-
-.mat-datepicker-content {
-    background-image: url(/assets/img/background.svg);
-    background-color: #222222;
-}
-
-.mat-slider-min-value:not(.mat-slider-thumb-label-showing) .mat-slider-thumb {
-    border-color: transparent!important;
-    background-color: #b0bec5!important;
-}
-.mat-autocomplete-panel {
-    background-image: url(/assets/img/background.svg);
-    background-color: #222222;
-}
-.mat-autocomplete-panel > mat-option {
-    height: 32px;
-    font-size: 13px;
-}
-.mat-autocomplete-panel .mat-option.mat-selected:not(.mat-active):not(:hover) {
-    background: transparent;
-    color: darkseagreen!important;
-}
 .mat-menu-panel {
-    background-image: url(/assets/img/background.svg)!important;
+    background-image: url(assets/img/background.svg)!important;
 }
 .mat-menu-content {
     background: #8585852b!important;
@@ -444,36 +236,9 @@ div.history-options-container > mat-paginator {
     pointer-events: none;
     opacity: 0.5;
 }
-.wk-rank {
-    background: #1db954;
-    border-radius: 2.5px;
-    color: #fff;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 7px 6px 6px 6px;
-    line-height: 5.5px;
-    display: inline-block;
-    white-space: nowrap;
-}
-.wk-rank-num1 {
-    background: darkseagreen!important;
-    color: #000!important;
-}
-
-.kick {
-    color: #1db954;
-}
-.kick:hover {
-    color: unset;
-}
 
 
 /* SCROLLBARS */
-.wk-actions-dialog {
-    font-size: 18px;
-    padding: 1px 0px 0px 0px!important;
-}
-
 ::-webkit-resizer {
 	background: transparent;
 }
@@ -501,4 +266,8 @@ div.history-options-container > mat-paginator {
 
 ::-webkit-scrollbar-track-piece {
 	display: none;
+}
+
+.hoverpic:hover{
+    opacity: 50%;
 }
