--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <div class="app-container">
   <router-outlet></router-outlet>
 </div>
+<div style="height: 50px;"></div>
 <app-footer></app-footer>
