start on some integration

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         Mainstreamify puts some helpful numbers to your musical taste so you can better understand your listening habits.<br>
         Sign in with your Spotify account to get started.<br><br>
         <div>
-            <a href="https://accounts.spotify.com/en/login/" target="_blank"><button color="primary" mat-raised-button style="margin-right: 1rem;">Sign In with Spotify</button></a>
+            <a (click)="signIn()" target="_blank"><button color="primary" mat-raised-button style="margin-right: 1rem;">Sign In with Spotify</button></a>
         </div>
     </div>
 </ng-template>
