Co-authored-by: Neil Menon <neilmenon@users.noreply.github.com>

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,7 +38,7 @@
             <button mat-menu-item [routerLink]="['/']">Sign Out</button>
           </mat-menu>
         </a>
-        <button (click)="toggleColor()" color="primary">Toggle Theme</button>
+        <button id="toggleTheme" color="primary">Toggle Theme</button>
       </span>
     </mat-toolbar>
     <ng-content></ng-content>
