--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,5 +1,6 @@
 <div class="box center">
     <div class="settings center-all">
+        <p id="savedtag">Settings Saved!</p>
         <h1 class="clear-color-full">Settings</h1>
         <form [formGroup]="settingsForm" class="settings-form">
             <h3 class="box-title">Main Dashboard Settings</h3>
