--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,12 @@
 .navdark{
-    background-color: black; 
+    background-image: url(/assets/img/background.svg);
+    background-color: #222222;
 }
 
 .navlight{
-    background-color: wheat;
+    background-color: #b3b3b3;
+}
+
+.blacktext{
+    color: black;
 }
