--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,16 @@
     <div class="box">
         <h2>Welcome to Mainstreamify {{"insert name here"}}</h2>
         <div>
-            
-            <h3>Here's who you vibe with: {{"insert top artists here"}}</h3>
+            <p id="errortag" style="visibility: hidden;">Invalid Input: Please Enter artists or tracks</p>
+            <form onsubmit="validate()">
+                <h3 class="box-title">Profile Description</h3>
+                <p>Top artists or Top tracks?</p>
+                <mat-form-field appearance="legacy" color="accent" style="width: 35%">
+                    <textarea matInput  type="text" formControlName="top" id="topinput"></textarea>
+                </mat-form-field>
+                <button color="accent" mat-raised-button id="topbtn" color="primary" type="submit">Get Tops</button>
+            </form>
+            <h3 id="toplabel" class="invis">Here's who you vibe with: {{"insert top artists here"}}</h3>
         </div>
     </div>
 </div>
