--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header>
+<app-header [user]="user" [signed_in]="signed_in">
 </app-header>
 <div class="app-container">
   <router-outlet></router-outlet>
