--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,7 @@ html {
   
   .navbar-user-panel {
     text-align: center;
-    height: 243px;
+    height: 220;
     line-height: 22px;
     text-decoration: none;
     max-width: 100%;
