--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,7 +12,7 @@
 <div class="box center">
     <h1>Profile</h1>
     <h2>{{ user.username }}</h2>
-    <p>{{ user.followers }} followers | Email: {{ user.email }} | Registered: {{ user.registeredDate.format("MM/DD/YYYY") }}</p>
+    <p>{{ user.followers }} followers | Email: {{ user.email }}</p>
     <span style="display: block; padding: 1rem;">
         User Status: 
         <span class="beta" style="background-color: goldenrod;">
