--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,34 +1,20 @@
 <div class="box center">
     <div class="settings center-all">
-        <p id="savedtag" style="visibility: hidden;">Settings Saved!</p>
-        <p id="errortag" style="visibility: hidden;">Error in Bio: Exceeds 500 chars</p>
+        <!-- <p id="savedtag" style="visibility: hidden;">Settings Saved!</p>
+        <p id="errortag" style="visibility: hidden;">Error in Bio: Exceeds 500 chars</p> -->
         <h1 class="clear-color-full">Settings</h1>
-        <form onsubmit="validateProfile()" [formGroup]="settingsForm" class="settings-form">
-            <h3 class="box-title">Main Dashboard Settings</h3>
-            <p>Default frequency for mainstream calculations.</p>
-            <mat-form-field appearance="legacy" color="accent">
-                <mat-label>Time Period</mat-label>
-                <mat-select formControlName="timePeriod" name="timePeriod">
-                    <mat-option [value]="30">30 days</mat-option>
-                    <mat-option [value]="60">60 days</mat-option>
-                    <mat-option [value]="90">90 days</mat-option>
-                    <mat-option [value]="180">180 days</mat-option>
-                </mat-select>
-            </mat-form-field>
-    
+        <form [formGroup]="settingsForm" class="settings-form">
             <h3 class="box-title">Profile Description</h3>
-            <p>Enter a cool description for your profile here (e.g. favorite artists, genres, and musical taste).</p>
-            <mat-form-field appearance="legacy" color="accent" style="width: 35%">
-                <textarea matInput placeholder="My name is John Doe and my favorite artists are Foals, Coldplay, and Avicii" type="text" formControlName="description" id="bio"></textarea>
-            </mat-form-field>
-            <h3 class="box-title">Privacy Settings</h3>
-            <div style="margin-bottom: 1rem;">
-                <span> 
-                    <mat-checkbox id="dontSellData" formControlName="dontSellData" name="dontSellData" aria-label="Checkbox" type="checkbox">Share my data with other users on Mainstreamify</mat-checkbox>
-                    <!-- <label for="dontSellData" aria-label="test"> </label> -->
-                </span>
+            <div *ngIf="showBioError" class="alert alert-error">
+                Profile Description cannot exceed 250 characters.
             </div>
+            <p>Enter a cool description for your profile here (e.g. favorite artists, genres, and musical taste).</p>
+            <mat-form-field appearance="legacy" color="accent" style="width: 75%">
+                <textarea matInput placeholder="My name is John Doe and my favorite artists are Foals, Coldplay, and Avicii" type="text" formControlName="bio" id="bio"></textarea>
+            </mat-form-field>
         </form>
+        <button mat-raised-button id="topbtn" color="primary" (click)="submitProfileBio()" [class.disable-click]="showBioError">Save Profile</button>
+
         <hr>
         <h1 class="clear-color-full">Actions</h1>
         <div class="settings-option">
