--- a/src/styles.css
+++ b/src/styles.css
@@ -271,3 +271,19 @@ hr {
 .hoverpic:hover{
     opacity: 50%;
 }
+
+.alert {
+    border-radius: 3px;
+    background-color: #4e4e4e;
+    color: #e2e2e2;
+    font-weight: bold;
+    width: 75%;
+    padding: 0.5rem;
+    display: block;
+    margin: auto;
+    margin-bottom: 1rem;
+}
+
+.alert-error {
+    background-color: #e74c3c;
+}
